--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,18 @@
     background: rgba( 255, 255, 255, 0 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;
+    border-radius: 1.5rem;
     border: 2px solid rgba( 255, 255, 255, 0.18 );
+}
+
+a {
+    text-decoration: none;
+}
+
+.link {
+    transition: 100ms ease-in-out;
+}
+
+.link:hover {
+    color: red;
 }
